Cianalab/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cianalabsui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cianalabsui
  template:
    metadata:
      labels:
        app: cianalabsui
    spec:
      containers:
      - name: cianalabsui
        image: cianadevregistry.azurecr.io/cianalabs:v5
        ports:
        - containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: cianalabsui-service
spec:
  type: ClusterIP  ## we will have muliple type like loadbalancer,clusterIp,etc
  ports:
  - protocol: TCP
    port: 4200
    targetPort: 4200
  selector:
    app: cianalabsui
