Cianalab/deploymentapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cianalabapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cianalabapi
  template:
    metadata:
      labels:
        app: cianalabapi
    spec:
      containers:
      - name: cianalabapi-service
        image: cianadevregistry.azurecr.io/cianalabapi:v12
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cianalabapi-service
spec:
  selector:
    app: cianalabapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
