Cianalab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cianaingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-redirect-off: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - staging.ciana.health
    secretName: my-tls-secret
  rules:
  - host: staging.ciana.health
    http:
      paths:
      - path: /cianacareabha(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianacarenewui2-service
            port:
              number: 4200
      - path: /cianalab(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianalabsui-service
            port:
              number: 4200
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianalabapi-service
            port:
              number: 8080
      - path: /arex(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianaarexui-service
            port:
              number: 4200
      - path: /arexapi(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianaarexapi-service
            port:
              number: 8080
      - path: /adminui(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianaadminui-service
            port:
              number: 4200
      - path: /adminapi(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianaadminapi-service
            port:
              number: 8080
      - path: /cianacareclinic(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianaclinicui-service
            port:
              number: 4200
      - path: /cianacare(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianacareui-service
            port:
              number: 4200
      - path: /clinicapi(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianaclinicapi-service
            port:
              number: 8080
      - path: /patientapi(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianahealthapi-service
            port:
              number: 8080
      - path: /socket(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianasocketapi-service
            port:
              number: 8080
      - path: /aiapi(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianaaiapi-service
            port:
              number: 8080
      - path: /cianacareapi(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianacarenewapi-service
            port:
              number: 8080
      - path: /cianacarewebui(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianacarenewui-service
            port:
              number: 4200
      - path: /elasticsearch(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianaelasticsearch-service
            port:
              number: 9200
      - path: /redis(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: docisnredis-service
            port:
              number: 6379
      - path: /ndhmapi(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianandhm-service
            port:
              number: 5002 
      - path: /cianacareapi2(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cianacarenewapi2-service
            port:
              number: 8080
